Começando a implementar um método que imprime o tabuleiro

--- a/xadrez-console/xadrez-console.csproj
+++ b/xadrez-console/xadrez-console.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>xadrez_console</RootNamespace>
-    <AssemblyVersion>1.21.7.3</AssemblyVersion>
-    <FileVersion>1.21.7.3</FileVersion>
+    <AssemblyVersion>1.21.7.5</AssemblyVersion>
+    <FileVersion>1.21.7.5</FileVersion>
   </PropertyGroup>
 
 </Project>
